<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_store">Shoe Store</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="welcome_to_shoe_store">Welcome to ShoeStore</string>
    <string name="welcome_message">Thank you for downloading the app we hope you enjoy our services!</string>
    <string name="next">Next</string>
    <string name="instructions">Instructions</string>
    <string name="how_it_works">How it works</string>
    <string name="details">Add items to the store by clicking the floating icon + and inputting the details of each item.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="instruction">Instructions</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout">Logout</string>
    <string name="name">Name:</string>
    <string name="size">Size:</string>
    <string name="company">Company:</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
