<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment2">

    <fragment
        android:id="@+id/titleFragment2"
        android:name="com.udacity.shoestore.screens.TitleFragment"
        android:label="@string/shoe_store"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment2_to_welcomeFragment"
            app:destination="@id/welcomeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.screens.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/instructionFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionFragment"
        android:name="com.udacity.shoestore.screens.InstructionFragment"
        android:label="@string/instruction"
        tools:layout="@layout/fragment_instruction" >
        <action
            android:id="@+id/action_instructionFragment_to_listingFragment"
            app:destination="@id/listingFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/titleFragment2"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.udacity.shoestore.screens.ListingFragment"
        android:label="@string/shoe_list"
        tools:layout="@layout/fragment_listing" >
        <action
            android:id="@+id/action_listingFragment_to_detailFragment2"
            app:destination="@id/detailFragment2"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_listingFragment_to_titleFragment2"
            app:destination="@id/titleFragment2"
            app:popUpTo="@id/navigation"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment2"
        android:name="com.udacity.shoestore.screens.DetailFragment"
        android:label="Shoe Details"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment2_to_listingFragment"
            app:destination="@id/listingFragment" />
    </fragment>
</navigation>