<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.DetailFragment">

    <data>
        <variable
            name="listDetails_shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/shoeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_smallsize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoeName"
            style="@style/format"
            android:background="@drawable/edit_text2"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/smaller_padding"
            android:paddingEnd="@dimen/smaller_padding"
            android:text="@={listDetails_shoe.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeTitle"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/sizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_smallsize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoeName" />

        <EditText
            android:id="@+id/sizeName"
            style="@style/format"
            android:background="@drawable/edit_text2"
            android:ems="10"
            android:inputType="number|text"
            android:text="@={listDetails_shoe.size}"
            android:paddingStart="@dimen/smaller_padding"
            android:paddingEnd="@dimen/smaller_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeTitle"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:id="@+id/companyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_smallsize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sizeName" />

        <EditText
            android:id="@+id/companyName"
            style="@style/format"
            android:background="@drawable/edit_text2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={listDetails_shoe.company}"
            android:paddingStart="@dimen/smaller_padding"
            android:paddingEnd="@dimen/smaller_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyTitle"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_smallsize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/companyName" />

        <EditText
            android:id="@+id/descriptionName"
            style="@style/format"
            android:background="@drawable/edit_text2"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={listDetails_shoe.description}"
            android:paddingStart="@dimen/smaller_padding"
            android:paddingEnd="@dimen/smaller_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle"
            tools:ignore="Autofill,LabelFor,TextFields" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="50dp"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionName" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionName" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>