<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/welcomeImageView"
            android:layout_width="405dp"
            android:layout_height="346dp"
            android:scaleType="fitCenter"
            android:src="@drawable/sixth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/welcomeTextView"
            style="@style/format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen"
            android:text="@string/welcome_to_shoe_store"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@+id/welcomeImageView"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/textView2"
            style="@style/format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:text="@string/next"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>