<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="479dp"
            android:layout_height="376dp"
            android:src="@drawable/eight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/instructionTextView"
            style="@style/format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen"
            android:text="@string/how_it_works"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/bodyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/format"
            android:textSize="@dimen/text_medium"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:layout_marginTop="@dimen/small_padding"
            android:textAlignment="center"
            android:text="@string/details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionTextView" />

        <Button
            android:id="@+id/nextButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="@dimen/small_padding"
            android:layout_marginEnd="@dimen/small_padding"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>